Closed Bug 119914 Opened 24 years ago Closed 24 years ago

Docshell does not properly map nsIWebNavigation::LOAD_FLAGS_REPLACE_HISTORY to nsDocShellLoadInfoType

Categories

(Core :: DOM: Navigation, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.9

People

(Reporter: radha, Assigned: radha)

References

Details

Attachments

(1 file)

DocShell forgets to map nsIWebNavigation::LOAD_FLAGS_REPLACE_HISTORY to its internal load type nsDocShellLoadType. This causes misbehavior when a page is loaded with nsIWebNavigation::LOAD_FLAGS_REPLACE_HISTORY flag.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.9
I think rick forgot to add the proper mapping when redoing the LoadURI() call. Since nsIWebNavigation load flags are not handled by ConvertLoadTypeToDocShellLoadInfo(), special flags like nsIWebNavigation::LOAD_FLAGS_BYPASS_HISTORY were getting ignored. The patch takes care of it.
Attachment #67293 - Flags: superreview+
Comment on attachment 67293 [details] [diff] [review] patch to docshell r=adamlock
Attachment #67293 - Flags: review+
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: