Fix for bug 119914. nsDocShell::LoadURi() does not properly map certain load flags in nsIWebNavigation. r= adamlock. sr=rpotts.